# RestaurantQR

./: .env.example  .gitignore  All44Prompts.md  CLAUDE.md  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
docs/: ARCHITECTURE.md  BACKEND_INTEGRATION_CONTRACT.md  DATA_MODEL.md  DESIGN_SYSTEM.md  ENVIRONMENT_VARIABLES.md  IMAGE_PROMPTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PART_2_INTEGRATION.md  PRODUCTION_CHECKLIST.md  ROUTE_MATRIX.md  menu-pdf-import-architecture.md  menu-pdf-import-deployment.md  menu-pdf-import-security.md  menu-pdf-import-troubleshooting.md  menu-pdf-import.md
drizzle/: 0000_hot_mystique.sql  0001_large_wasp.sql  0002_huge_la_nuit.sql  0003_luxuriant_white_queen.sql  0004_last_steve_rogers.sql
e2e/: admin-part2.spec.ts  admin.spec.ts  change-password.spec.ts  db-migration.spec.ts  menu-pdf.spec.ts  public.spec.ts  real-auth.spec.ts
services/menu-extraction-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/menu-extraction-worker/app/: main.py
services/menu-extraction-worker/app/core/: config.py  security.py
services/menu-extraction-worker/app/extractors/: native_text.py  pdf_preflight.py
services/menu-extraction-worker/app/jobs/: processor.py
services/menu-extraction-worker/app/normalization/: prices.py
services/menu-extraction-worker/app/providers/: base.py  deterministic.py
services/menu-extraction-worker/app/schemas/: menu_import.py
services/menu-extraction-worker/tests/: test_prices.py
(+308 files in other folders)
