[project]
name = "menu-extraction-worker"
version = "0.1.0"
description = "YourPlatform PDF menu extraction worker (FastAPI). Deterministic text extraction now; OCR/vision/AI are pluggable."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "pdfplumber==0.11.4",
  "pillow==11.1.0",
]

[project.optional-dependencies]
# Enable real OCR / rendering in production images (system packages also required — see Dockerfile).
ocr = ["pytesseract==0.3.13", "pdf2image==1.17.0"]
dev = ["pytest==8.3.4", "httpx==0.28.1", "ruff==0.8.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
